clap_derive/tests/ui/flatten_enum_in_struct.stderr
error[E0277]: the trait bound `SubCmd: clap::Args` is not satisfied
 --> $DIR/flatten_enum_in_struct.rs:3:12
  |
3 |     #[clap(flatten)]
  |            ^^^^^^^ the trait `clap::Args` is not implemented for `SubCmd`
  |
  = note: required by `augment_args`
