clap_derive/tests/ui/flatten_enum_in_struct.rs
#[derive(clap::Parser)]
struct Opt {
    #[clap(flatten)]
    sub: SubCmd,
}

#[derive(clap::Parser)]
enum SubCmd {}

fn main() {}
